Update the GH action

--- a/.github/workflows/publish-athena-jdbc-jar.yml
+++ b/.github/workflows/publish-athena-jdbc-jar.yml
@@ -1,11 +1,8 @@
 name: Publish athena-jdbc jar to S3
 
 on:
+  push:
   pull_request:
-    paths-ignore:
-      - '**.md'
-      - '.gitpod.yml'
-    branches: [ main ]
     types: [ ready_for_review, opened, synchronize, reopened, labeled ]
   workflow_dispatch:
     branches:
