--- a/.github/workflows/publish-athena-jdbc-jar-itest.yml
+++ b/.github/workflows/publish-athena-jdbc-jar-itest.yml
@@ -1,4 +1,4 @@
-name: Publish athena-jdbc jar to S3
+name: Publish athena-jdbc jar to S3 - ITEST
 
 on:
   workflow_dispatch:
@@ -17,7 +17,7 @@ env:
 
 jobs:
   publish-jar:
-    name: Publish athena-jdbc jar to S3
+    name: Publish athena-jdbc jar to S3 - ITEST
     if: github.repository == 'trilogy-group/aws-athena-query-federation'
     runs-on: ubuntu-latest
     steps:
