--- a/.github/workflows/publish-athena-jdbc-jar-itest.yml
+++ b/.github/workflows/publish-athena-jdbc-jar-itest.yml
@@ -1,6 +1,8 @@
 name: Publish athena-jdbc jar to S3 - ITEST
 
 on:
+  pull_request:
+    types: [ ready_for_review, opened, synchronize, reopened, labeled ]
   workflow_dispatch:
     branches:
       - '**'
